# card_game

./: .gitignore  Cargo.toml  build.rs  torus.stl
model/: go stone.blend  go stone.blend1  go stone.blend2  scene_test.blend  torus.blend
shader/: fragment_shader.frag  fragment_shader.fs  fragment_shader.fsspirv  fragment_shader.fsspirvasm  light_assignment.comp  vertex_shader.vert  vertex_shader.vs  vertex_shader.vsspirv  vertex_shader.vsspirvasm
src/: common_component.rs  data_types.rs  game.rs  geometry_library.rs  import_mesh.rs  light_managment_system.rs  macros.rs  main.rs  render_system.rs  renderer.rs  shader_library.rs  texture_library.rs  tile_world.rs  time.rs  util.rs
src/pvnrt/: network.rs
texture/: crabdance-seamless-tile.ktx2  curly-brace.xcf
